[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/GDEditor/Resources/Icons/icon.png" type="Texture" id=1]
[ext_resource path="res://addons/GDEditor/Scenes/CharacterExpressionItem.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=3]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="Theme" id=4]
PanelContainer/styles/CharacterExpressionFocus = SubResource( 3 )

[node name="CharacterExpressionItem" type="PanelContainer"]
margin_right = 142.0
margin_bottom = 176.0
focus_mode = 2
theme = SubResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 135.0
margin_bottom = 169.0
custom_constants/separation = 10

[node name="ExpressionTextRect" type="TextureRect" parent="VBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="ExpressionEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 138.0
margin_right = 128.0
margin_bottom = 162.0
text = "owo"
align = 1
placeholder_text = "Expression Name"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="VBoxContainer/ExpressionTextRect" to="." method="_on_ExpressionTextRect_gui_input"]
[connection signal="text_changed" from="VBoxContainer/ExpressionEdit" to="." method="_on_ExpressionEdit_text_changed"]
